// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should have hover/active styles only when the onClick handler is provided 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFF;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.25px;
  -moz-letter-spacing: 0.25px;
  -ms-letter-spacing: 0.25px;
  letter-spacing: 0.25px;
  background-color: #E6E6E6;
  color: #000;
  border: 0;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
}

.circuit-0:hover,
.circuit-0:active {
  background-color: #999999;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

<button
  class="circuit-0"
/>
`;

exports[`Badge should have the correct circle styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFF;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.25px;
  -moz-letter-spacing: 0.25px;
  -ms-letter-spacing: 0.25px;
  letter-spacing: 0.25px;
  background-color: #E6E6E6;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 2px 4px;
  height: 24px;
  width: 24px;
}

<div
  class="circuit-0"
/>
`;

exports[`Badge should render with danger styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFF;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.25px;
  -moz-letter-spacing: 0.25px;
  -ms-letter-spacing: 0.25px;
  letter-spacing: 0.25px;
  background-color: #D23F47;
  color: #FFF;
}

<div
  class="circuit-0"
/>
`;

exports[`Badge should render with default styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFF;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.25px;
  -moz-letter-spacing: 0.25px;
  -ms-letter-spacing: 0.25px;
  letter-spacing: 0.25px;
  background-color: #E6E6E6;
  color: #000;
}

<div
  class="circuit-0"
/>
`;

exports[`Badge should render with primary styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFF;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.25px;
  -moz-letter-spacing: 0.25px;
  -ms-letter-spacing: 0.25px;
  letter-spacing: 0.25px;
  background-color: #3063E9;
  color: #FFF;
}

<div
  class="circuit-0"
/>
`;

exports[`Badge should render with success styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFF;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.25px;
  -moz-letter-spacing: 0.25px;
  -ms-letter-spacing: 0.25px;
  letter-spacing: 0.25px;
  background-color: #47995A;
  color: #FFF;
}

<div
  class="circuit-0"
/>
`;

exports[`Badge should render with warning styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFF;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.25px;
  -moz-letter-spacing: 0.25px;
  -ms-letter-spacing: 0.25px;
  letter-spacing: 0.25px;
  background-color: #F6CC1B;
  color: #000;
}

<div
  class="circuit-0"
/>
`;
